# ChangeLog for x11-wm/fluxbox
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/fluxbox/ChangeLog,v 1.324 2015/01/26 12:31:03 idella4 Exp $

  26 Jan 2015; Ian Delaney <idella4@gentoo.org> -fluxbox-1.3.6.ebuild,
  files/1.3.5-generate_menu-printf-fix.patch, fluxbox-1.3.5-r1.ebuild,
  fluxbox-9999.ebuild:
  update patch with final form from upstream, add missed addition from bug
  537356 to -1.3.5-r1, full update to live ebuild from patch from same bug,
  remove broken 1.3.6 ebuild, fixes Bugs 537356, 536370 by maintainers

  26 Jan 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for x86, wrt bug #536086

  26 Jan 2015; Ian Delaney <idella4@gentoo.org> fluxbox-1.3.6-r1.ebuild:
  add fix re USE toolbar from Bug 537356 to -1.3.6-r1, patch by maintainer D.
  Campbell

*fluxbox-1.3.5-r1 (26 Jan 2015)

  26 Jan 2015; Ian Delaney <idella4@gentoo.org> +fluxbox-1.3.5-r1.ebuild:
  revbump to -1.3.5; patch by D. Campbell, fixes bug #537356 made by co-
  maintainer

*fluxbox-1.3.6-r1 (24 Jan 2015)

  24 Jan 2015; Ian Delaney <idella4@gentoo.org>
  +files/1.3.5-generate_menu-printf-fix.patch, +fluxbox-1.3.6-r1.ebuild:
  revbump; Add patch prepared by proxy maintainer, D. Campbell, from bug #536370
  addressing format issue in icon paths, fixes said Bug

  22 Jan 2015; Markus Meier <maekke@gentoo.org> fluxbox-1.3.5.ebuild:
  arm stable, bug #536086

  22 Jan 2015; Agostino Sarubbo <ago@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for amd64, wrt bug #536086

  12 Jan 2015; Jeroen Roovers <jer@gentoo.org> fluxbox-1.3.5.ebuild:
  Stable for HPPA (bug #536086).

*fluxbox-1.3.6 (11 Jan 2015)

  11 Jan 2015; Aaron W. Swenson <titanofold@gentoo.org> +fluxbox-1.3.6.ebuild:
  Version bump fixes bug 535864. Thanks Daniel Campbell.

  07 Jan 2015; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Update e-mail address.

  20 Oct 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml: