@@ -10,4 +10,4 @@ RDEPEND=!!<=x11-misc/fbdesk-1.2.1 !!<=x11-misc/fluxconf-0.9.9 !!<x11-themes/flux
 SLOT=0
 SRC_URI=mirror://sourceforge/fluxbox/fluxbox-1.3.6.tar.xz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=fd74ecb32d7dfa4b1210bfc00a4a15c2
+_md5_=0a5a9e56d0bac4a841b4e263b60fca7f
