@@ -13,16 +13,16 @@ DIST fluxbox-1.3.2.tar.bz2 787400 SHA256 e8aaf46c043eb6186383c6dde8bf98dbd62305b
 DIST fluxbox-1.3.5.tar.lzma 694672 SHA256 f4faf1fcb995dbe85d272e511e388de347ff07b69e9f8c5af0248cf330ee2a07 SHA512 55d1689660b9240851be55183f665efff281f8f344474ddd1bee089635cb34e343cca85743900675c21579cf9e58c7bd756932a30c2ff4e6384b500d7c4bdcd8 WHIRLPOOL 6f379f9f224478556c53e2585f76c28f29c20b1fce5ab24ed0d06a813e51ddb1e0eaea7658ec1fa5979b951613542dd47dad4fd7af17bbdf0530653b8583b18d
 DIST fluxbox-1.3.6.tar.xz 793144 SHA256 fa09ad8d30841021a1e5147efa944eb509201fa3619da5b6608d94cbbf55bf33 SHA512 66257f00b3f92cb3b87990610e0b5d6c7191c75997bbcba6744d581ccec36da2d1724767575dcde81be4fdbf39e2e25c8530013ee52a28d4775230fdf04b2f9a WHIRLPOOL 198a3972a81287a1fa6346a708bf461cd9b5262adb7cb17504077e9d154c582947b05f7508d151363f36f78d822fa9fbf9797ee4cc6f7f76a8cc5b7a69db4c52
 EBUILD fluxbox-1.3.2.ebuild 3074 SHA256 2b40e87e859143f3ee4624b43dceb3aa2a6d7ef91e8ff0f0ed0b2baa761019a6 SHA512 2b7d10575df296824b792b199aeb0b42422b95394bb4dbb1c2074adba351d8ec2870a75e898901d96d469de23ebd3ff6ee1f912e1f874301ec9816f08b9d5bb0 WHIRLPOOL caa40774d95533f3cedd31f41531de367c7166f2a8f2cd804a0361cf8cda62bb35de8ef09eba3e8118b26434bf4437538706e12397391cbca79567f01a1871b7
-EBUILD fluxbox-1.3.5-r1.ebuild 3258 SHA256 ade6d0944117fb8fceac3b2ad4b5f5bf4ff0ad192aec49b13dacabd4ff7ba9c1 SHA512 b3301791bed4bed4c1ca38ca33ef2a8e1f0e5f99e710ada09c75801096a2c0bf69a94645a53918614017d95d4465aba7f3b568f1ff987de208abe9038eaa9670 WHIRLPOOL 794d6bddea74edb8e042a6306f7a234db228715a5e061342a99ba261b755c4792d0b6281a84886dcb30e2fefd747ca74def6fecc2a64bbb16f52988cee7c55e7
+EBUILD fluxbox-1.3.5-r1.ebuild 3285 SHA256 49ed36a34815ffe1fd1c72a82244f815ac0235fb1d830ecae54b296c97591f3f SHA512 ddef282d83461bf7c7bdb0b14adf06ed2395986e735e73a03338e71fe39e228aac1b7a2f928cb62fb8eedc76189e306f0ea71e7ec5cd2de0d09af4b93efda4e5 WHIRLPOOL 280f2a7c7926939dbb820a8e18c3904af1381959cd068c5799d90830439f1dd3413518f0af59dbdafa6891bfa1d1140b585d7a3fe27107842bbdabb2d07a9b23
 EBUILD fluxbox-1.3.5.ebuild 3079 SHA256 baea9548a0c6d527a7f1df7687b310fbd04feb97e3a35225486279895ce3e236 SHA512 cff7fa21595b2a78874623190bc0a1c4f4b3a7978eb78fea11bbe07022b029529858217725aa0e844b071056b42e089e22238835c545e0019a698c8df4845cfe WHIRLPOOL 970ae42ffeb495a2a757494c63b3f932678fb85a7c016f6315269d5486502438e50bc1828fda0bab3136e3bccd595cae2695b3f2e9946bf79731faf639565f40
-EBUILD fluxbox-1.3.6-r1.ebuild 3256 SHA256 5f6d477065ce4ae9718c440d60e9e735b87a1a948eb55fa645f671482bc650bb SHA512 3c60e914ff74b4d73f715c6b9ee109d9cd0f1c1b41a9dba2038496a440a7f1628bed766ca9727eaa4914d1d01c2c9a03f2336ea9919d058e36fc0cf55afd1a45 WHIRLPOOL dfe02715106f5e6c2abb8c56499fb3917f9dfd8defcbc9f3fba22cb7ccea72a69abd24391dfb8d52ee4a7a3117fb6777172501e47265b9d498f6ae0dee0d4200
+EBUILD fluxbox-1.3.6-r1.ebuild 3283 SHA256 90f0b49690745de1d3231974f0759c3bb20ddee86374b64c00cac2df8b8e6dfd SHA512 caf4749a2c30d28c6a1776bdc7757be77e7262f4b659cce077911692ce373449174dca8dcddf2331ab993309627447fead0955cc673663611cad7cfdacc32145 WHIRLPOOL f8ad6901200dc540877b34a04e426316e7e23fb10da8696e5ba546355c5057ca5d44cb2bb2282230adc8420e6aa73b8d4023d9c597131ce5cc9deeaeb3393a1b
 EBUILD fluxbox-9999.ebuild 3089 SHA256 d21eb8f4d0b5ac2b1c9e9355906b7295b36a2e1c4fd748df1c94f9fcf8d1599d SHA512 d7434517dab3cb173cce62ab0df6aac8854052680bf1c08a5d49ea0eab6d0993306ddb95a5fcf07d6dfd323e1110c75cf801d0f09fe053c7a6fbdf896620c4d7 WHIRLPOOL 2eba3fd26c2cb2f78e455ad84c70787f93884347e04d897b475532e52d91f5241610b9eed322ed2630cda1b870395d1d9bebddc1f48a13defbb6c0a51d8e4339
-MISC ChangeLog 58811 SHA256 50f3783a60690827019618c6a406cd1eb4f01cba1f68fdd65c3e4e6c3abbd7a9 SHA512 ac4895d542a7cc8ccf0c8ad982a9dae45153bd1cf08a5d3e2d4c731edf035fc175c1eea46ec06485a10c34b7807c9b94b2b5eb4c0b36faf712720d244ca41630 WHIRLPOOL ffd3bed95c4c041fef91b626d92a9f2e1b8a4d2b53eade575e9273cdc9c866113ccd10063253b0498c383ac6fe7dd8ac942538675ead40657e41a85ed654be2c
+MISC ChangeLog 58945 SHA256 625e7ce232cc6ddad9e366591044dc3fed36ee2b399c5ca18d24b8dc2e8eb027 SHA512 bf21fd76f4db65a32d49c3abb7912c56f8ba08c1c593660261b1eab66a24e5aa6899dcc315df3b296554de9ca7570e9e1ced38a4caf90fcb55ccc9838c5574e8 WHIRLPOOL 6b34be4258a25ea3c218211d1656b31b2b88016af721aed4b6b1622854c819237643ac33329813390b8ae710d9ca803eaf510521c74d76bd2d6a42a9d2905cbd
 MISC metadata.xml 967 SHA256 2ffac0979f0372a134fd4d867258de0771847fe5114e58aedc0bc6d51cc43955 SHA512 f5b54fcf45f9dde3370ef781d8ae52aa696d260ef113555f34e6b17beca7d96a3992cf0713aed33d5daf215990d3d35244253b99b93b2fecb332ae630d486234 WHIRLPOOL 7262d71d2ddb256766535935fe9403aa1ac81b37b03f78b513e6a5700250ca10e9cac65a110498186736eca17e6703bd5555770383daef426fea445ca285409c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTGM5cACgkQso7CE7gHKw0tYACeJUv8jTXXu725cYa84u8ApCrg
-M2AAoKnckiho92BmMzI4YFo/S866I21I
-=/nsk
+iEYEAREIAAYFAlTG2EsACgkQso7CE7gHKw2r2QCgxXcGrXUekSqCcBu9OyEaUKy0
+i6sAn0Cc/v01LwitdSziy5XNkeWaoA+S
+=9Tqx
 -----END PGP SIGNATURE-----
