@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/fluxbox
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/fluxbox/ChangeLog,v 1.324 2015/01/26 12:31:03 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/fluxbox/ChangeLog,v 1.325 2015/01/27 00:13:50 idella4 Exp $
+
+  27 Jan 2015; Ian Delaney <idella4@gentoo.org> fluxbox-1.3.5-r1.ebuild,
+  fluxbox-1.3.6-r1.ebuild:
+  Set correct fix to bug #537356
 
   26 Jan 2015; Ian Delaney <idella4@gentoo.org> -fluxbox-1.3.6.ebuild,
   files/1.3.5-generate_menu-printf-fix.patch, fluxbox-1.3.5-r1.ebuild,
